--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-666
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="header">
+      <!-- logo start -->
+      <div class="logo"><img src="img/logo.jpg"></div>
+      <!-- logo end -->
+      <!-- nav start -->
+      <div class="nav">
+        <ul>
+          <li><a href="#">首页</a></li>
+          <li><a href="#">产品特色</a></li>
+          <li><a href="#">解决方案</a></li>
+          <li><a href="#">产品价格</a></li>
+          <li><a href="#">帮助中心</a></li>
+          <li><a href="#">关于我们</a></li>
+        </ul>
+      </div>
+      <!-- nav end -->
+      <div class="clear"></div>
+    </div>
+    <!--导航栏结束-->
+
+    <div class="banner">我是轮播</div>
+    <!--轮播结束-->
+
+    <div class="news_gundong">我是滚动新闻</div>
+    <!--滚动新闻结束-->
+
+    <div class="pic_list">我是大图列表</div>
+    <!--大图列表结束-->
+
+    <div class="news">我是新闻区</div>
+    <!--新闻区结束-->
+
+    <div class="banquan">我是版权区</div>
+    <!--版权区结束-->
+  </div>
+  <!--wrap结束-->
+
+</body>
+
+</html>
