--- a/index.html
+++ b/index.html
@@ -29,19 +29,50 @@
     </div>
     <!--导航栏结束-->
 
-    <div class="banner">我是轮播</div>
+    <div class="banner">
+      <img src="img/ad2.jpg">
+    </div>
     <!--轮播结束-->
 
-    <div class="news_gundong">我是滚动新闻</div>
+    <div class="flashnews">
+      <div class="flashnews_left">
+        <span>滚动新闻</span>
+      </div>
+      <!--滚动新闻左边结束-->
+
+      <div class="flashnews_right">
+        <span>这是滚动新闻</span>
+      </div>
+      <!--滚动新闻右边结束-->
+    </div>
     <!--滚动新闻结束-->
 
-    <div class="pic_list">我是大图列表</div>
-    <!--大图列表结束-->
+    <div class="course">
+      <div class="course_pic">
+        <ul class="pic_list">
+          <li><img src="img/bs.jpg"></li>
+          <li class="mid_pic"><img src="img/css.jpg"></li>
+          <li><img src="img/js.jpg"></li>
+        </ul>
+      </div>
+      <!--课程图片结束-->
+      <div class="clear"></div>
+      <!--课程图片结束-->
+      <div class="course_title">
+        <ul class="title_list">
+          <li><span>玩转BootStrap</span></li>
+          <li><span class="mid_title">企业网站案例</span></li>
+          <li><span>JavaScript基础</span></li>
+        </ul>
+      </div>
+      <!--课程标题结束-->
+    </div>
+    <!--课程列表结束-->
 
     <div class="news">我是新闻区</div>
     <!--新闻区结束-->
 
-    <div class="banquan">我是版权区</div>
+    <div class="copyright">我是版权区</div>
     <!--版权区结束-->
   </div>
   <!--wrap结束-->
