--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </ul>
       </div>
       <!--课程图片结束-->
-      <div class="clear"></div>
-      <!--课程图片结束-->
+      <!--  <div class="clear"></div>  -->
+      <!--清除浮动-->
       <div class="course_title">
         <ul class="title_list">
           <li><span>玩转BootStrap</span></li>
@@ -69,7 +69,43 @@
     </div>
     <!--课程列表结束-->
 
-    <div class="news">我是新闻区</div>
+    <div class="news">
+      <ul class="news_list">
+        <li>
+          <div class="news_left">
+            <div class="news_top">
+              <span>新闻中心</span>
+            </div>
+          </div>
+        </li>
+        <!--新闻中心结束-->
+        <li>
+          <div class="news_mid">
+            <div class="news_top">
+              <span>热门活动</span>
+            </div>
+          </div>
+        </li>
+        <!--热门活动结束-->
+        <li>
+          <div class="news_right">
+            <div class="news_top">
+              <span>联系我们</span>
+            </div>
+            <div class="news_right_info">
+              <ul>
+                <li>讲师招募</li>
+                <li>讲师招募</li>
+                <li>讲师招募</li>
+                <li>讲师招募</li>
+                <li>讲师招募</li>
+              </ul>
+            </div>
+          </div>
+        </li>
+        <!--联系我们结束-->
+      </ul>
+    </div>
     <!--新闻区结束-->
 
     <div class="copyright">我是版权区</div>
