--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
 
     <div class="course">
       <div class="course_pic">
-        <ul class="pic_list">
-          <li><img src="img/bs.jpg"></li>
-          <li class="mid_pic"><img src="img/css.jpg"></li>
-          <li><img src="img/js.jpg"></li>
-        </ul>
+          <div class="mid_pic_bs"><img src="img/bs.jpg"></div>
+          <div class="mid_pic_css"><img src="img/css.jpg"></div>
+          <div class="mid_pic_js"><img src="img/js.jpg"></div>
+          <div class="mid_pic_clear"></div>
       </div>
       <!--课程图片结束-->
       <!--  <div class="clear"></div>  -->
@@ -84,23 +83,35 @@
             <div class="news_top">
               <span>热门活动</span>
             </div>
+            <div class="news_mid_pic">
+              <img src="img/2048.jpg">
+            </div>
           </div>
         </li>
         <!--热门活动结束-->
         <li>
           <div class="news_right">
-            <div class="news_top">
-              <span>联系我们</span>
-            </div>
-            <div class="news_right_info">
+            <div class="news_top"><span>联系我们</span></div>
+            <div class="news_right_teacher">
               <ul>
                 <li>讲师招募</li>
-                <li>讲师招募</li>
-                <li>讲师招募</li>
-                <li>讲师招募</li>
-                <li>讲师招募</li>
+                <li>驺同学</li>
+                <li>电话:18268134743</li>
+                <li>QQ:888999000</li>
+                <li>E-mail:123456@qq.com</li>
               </ul>
             </div>
+
+            <div class="news_right_web">
+              <ul>
+                <li>网站合作</li>
+                <li>李同学</li>
+                <li>电话:18268134743</li>
+                <li>QQ:666666666</li>
+                <li>E-mail:987654321@163.com</li>
+              </ul>
+            </div>
+
           </div>
         </li>
         <!--联系我们结束-->
