--- a/index.html
+++ b/index.html
@@ -44,32 +44,78 @@
         <span>这是滚动新闻</span>
       </div>
       <!--滚动新闻右边结束-->
+      <div class="clear"></div>
     </div>
     <!--滚动新闻结束-->
 
     <div class="course">
-      <div class="course_pic">
-          <div class="mid_pic_bs"><img src="img/bs.jpg"></div>
-          <div class="mid_pic_css"><img src="img/css.jpg"></div>
-          <div class="mid_pic_js"><img src="img/js.jpg"></div>
-          <div class="mid_pic_clear"></div>
+      <div class="hot-box">
+        <div class="img-box">
+          <img src="img/bs.jpg">
+        </div>
+        <div class="title">
+          玩转Bootstap
+        </div>
       </div>
-      <!--课程图片结束-->
-      <!--  <div class="clear"></div>  -->
-      <!--清除浮动-->
-      <div class="course_title">
-        <ul class="title_list">
-          <li><span>玩转BootStrap</span></li>
-          <li><span class="mid_title">企业网站案例</span></li>
-          <li><span>JavaScript基础</span></li>
-        </ul>
+      <div class="hot-box middle">
+        <div class="img-box">
+          <img src="img/css.jpg">
+        </div>
+        <div class="title">
+          企业网站案例
+        </div>
       </div>
-      <!--课程标题结束-->
+      <div class="hot-box">
+        <div class="img-box">
+          <img src="img/js.jpg">
+        </div>
+        <div class="title">
+          Javascript基础
+        </div>
+      </div>
+      <div class="clear"></div>
     </div>
     <!--课程列表结束-->
 
     <div class="news">
-      <ul class="news_list">
+      <div class="news-box">
+        <div class="title">
+          新闻中心
+        </div>
+        <div class="main hot-news-list">
+          <ul>
+            <li>
+              <div class="date">
+                8月23日
+              </div>
+              <div class="item">
+                <h4>呵呵呵该死该死该死死个</h4>
+                <p>共同话题天后捣鼓捣鼓捣鼓公司收购该死该死该死警方放假放假</p>
+              </div>
+              <div class="clear"></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="news-box middle">
+        <div class="title">
+          热门活动
+        </div>
+        <div class="main hot-active">
+
+        </div>
+      </div>
+      <div class="news-box">
+        <div class="title">
+          联系我们
+        </div>
+        <div class="main contact">
+
+        </div>
+      </div>
+      <div class="clear"></div>
+
+      <!-- <ul class="news_list">
         <li>
           <div class="news_left">
             <div class="news_top">
@@ -77,7 +123,6 @@
             </div>
           </div>
         </li>
-        <!--新闻中心结束-->
         <li>
           <div class="news_mid">
             <div class="news_top">
@@ -88,7 +133,6 @@
             </div>
           </div>
         </li>
-        <!--热门活动结束-->
         <li>
           <div class="news_right">
             <div class="news_top"><span>联系我们</span></div>
@@ -114,8 +158,7 @@
 
           </div>
         </li>
-        <!--联系我们结束-->
-      </ul>
+      </ul> -->
     </div>
     <!--新闻区结束-->
 
