--- a/index.html
+++ b/index.html
@@ -89,8 +89,28 @@
                 8月23日
               </div>
               <div class="item">
-                <h4>呵呵呵该死该死该死死个</h4>
-                <p>共同话题天后捣鼓捣鼓捣鼓公司收购该死该死该死警方放假放假</p>
+                <h4>学习计划之安卓工程师养成</h4>
+                <p>想成为安卓工程师？想开发一款专属APP？没有任何基础的你应该从何学起？</p>
+              </div>
+              <div class="clear"></div>
+            </li>
+            <li>
+              <div class="date">
+                8月23日
+              </div>
+              <div class="item">
+                <h4>学习计划之安卓工程师养成</h4>
+                <p>想成为安卓工程师？想开发一款专属APP？没有任何基础的你应该从何学起？</p>
+              </div>
+              <div class="clear"></div>
+            </li>
+            <li>
+              <div class="date">
+                8月23日
+              </div>
+              <div class="item">
+                <h4>学习计划之安卓工程师养成</h4>
+                <p>想成为安卓工程师？想开发一款专属APP？没有任何基础的你应该从何学起？</p>
               </div>
               <div class="clear"></div>
             </li>
@@ -102,6 +122,16 @@
           热门活动
         </div>
         <div class="main hot-active">
+          <ul>
+            <li>
+              <img class="code-img" src="img/2048.jpg">
+            </li>
+            <li>慕课网2048源码征集</li>
+            <li>慕课网2048源码征集</li>
+            <li>慕课网2048源码征集</li>
+            <li>慕课网2048源码征集</li>
+            <li>慕课网2048源码征集</li>
+          </ul>
 
         </div>
       </div>
@@ -110,59 +140,47 @@
           联系我们
         </div>
         <div class="main contact">
-
+          <div class="techer-offer">
+            <div>
+              讲师招募
+            </div>
+            <div>
+              邹同学
+            </div>
+            <div>
+              电话：13800007777
+            </div>
+            <div>
+                QQ：909888888
+            </div>
+            <div>
+                E-mail:123456@qq.com
+            </div>
+          </div>
+          <div class="web-coperation">
+            <div>
+              网站合作
+            </div>
+            <div>
+              吕同学
+            </div>
+            <div>
+              电话：13800007777
+            </div>
+            <div>
+                QQ：909888888
+            </div>
+            <div>
+                E-mail:123456@qq.com
+            </div>
+          </div>
         </div>
       </div>
       <div class="clear"></div>
-
-      <!-- <ul class="news_list">
-        <li>
-          <div class="news_left">
-            <div class="news_top">
-              <span>新闻中心</span>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="news_mid">
-            <div class="news_top">
-              <span>热门活动</span>
-            </div>
-            <div class="news_mid_pic">
-              <img src="img/2048.jpg">
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="news_right">
-            <div class="news_top"><span>联系我们</span></div>
-            <div class="news_right_teacher">
-              <ul>
-                <li>讲师招募</li>
-                <li>驺同学</li>
-                <li>电话:18268134743</li>
-                <li>QQ:888999000</li>
-                <li>E-mail:123456@qq.com</li>
-              </ul>
-            </div>
-
-            <div class="news_right_web">
-              <ul>
-                <li>网站合作</li>
-                <li>李同学</li>
-                <li>电话:18268134743</li>
-                <li>QQ:666666666</li>
-                <li>E-mail:987654321@163.com</li>
-              </ul>
-            </div>
-
-          </div>
-        </li>
-      </ul> -->
     </div>
     <!--新闻区结束-->
 
-    <div class="copyright">我是版权区</div>
+    <div class="copyright">CopyRight@ 2013 imooc.com AllRights Reserved 京ICP备12345-65号 </div>
     <!--版权区结束-->
   </div>
   <!--wrap结束-->
